# flamel

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-test.yml
examples/: orm.py
flamel/: base.py  column.py  dialect.py  query.py
tests/: test_base.py  test_column.py  test_dialect.py  test_query.py  test_sqlbuilder.py
