[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flamel"
version = "0.0.1"
authors = [
  { name = "test", email = "test@test.com" },
]
description = "A simple declarative ORM for SQLite"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["ORM", "simple"]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3.8",
  "Development Status :: 3 - Alpha",
  "Topic :: Database :: ORM",
]

[tool.setuptools.packages.find]
exclude = ["logo*", "dist*", "tests*", "examples*"]

[tool.wheel]
exclude = ["logo*", "dist*", "tests*", "examples*"]
