[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flamel-orm"
version = "0.0.3"
authors = [
  { name = "fernando24164", email = "fernando24164@gmail.com" },
]
description = "A simple declarative ORM for SQLite"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["ORM", "simple"]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3.8",
  "Development Status :: 3 - Alpha",
]

[project.urls]
Repository = "https://github.com/fernando24164/flamel"

[tool.setuptools.packages.find]
exclude = ["logo*", "dist*", "tests*", "examples*"]

[tool.wheel]
exclude = ["logo*", "dist*", "tests*", "examples*"]
